Finished calculator model and added tomighty knockoffs

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,6 @@
   <repository path="..\MyWpfCalculator2\packages.config" />
   <repository path="..\MyWpfCalculator3\packages.config" />
   <repository path="..\TplMergeSort1\packages.config" />
+  <repository path="..\WpfTomighty\packages.config" />
+  <repository path="..\WpfTomighty2\packages.config" />
 </repositories>
