Worked on f# heap

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Algorithms\packages.config" />
+  <repository path="..\FSharpLeftistHeap\packages.config" />
+  <repository path="..\FSharpSpecTests\packages.config" />
   <repository path="..\MyWpfCalculator2\packages.config" />
   <repository path="..\MyWpfCalculator3\packages.config" />
   <repository path="..\TplMergeSort1\packages.config" />
