Cleaned up leftist heap. Merged code from calc3 into calc2.

--- a/MyWpfCalculator2/MyWpfCalculator2.csproj
+++ b/MyWpfCalculator2/MyWpfCalculator2.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Elysium">
+      <HintPath>..\packages\Elysium.Theme.2.0.4\lib\net45\Elysium.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -64,6 +67,7 @@
     </Compile>
     <Compile Include="Specs\StepDefinitions\CalculatorSpecificationSteps.cs" />
     <Compile Include="ViewModelBase.cs" />
+    <Compile Include="ViewModels\Enums.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
