Tried to recreate the calculator. Tried creating a heap in an array.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Algorithms\packages.config" />
+  <repository path="..\CalculatorPresenter\packages.config" />
   <repository path="..\FSharpLeftistHeap\packages.config" />
   <repository path="..\FSharpSpecTests\packages.config" />
   <repository path="..\MyWpfCalculator2\packages.config" />
