--- a/HeapList/HeapList.csproj
+++ b/HeapList/HeapList.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Heap.cs" />
+    <Compile Include="Heap2.cs" />
     <Compile Include="HeapUnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
